<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context="com.welightworld.fadetop.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.3"
            android:text="@string/work_time" />


        <ImageView
            android:id="@+id/iv_work_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icons_reduce" />

        <ImageView
            android:id="@+id/iv_work_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icons_add" />

        <TextView
            android:id="@+id/tv_worktime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/work_duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"

        android:padding="20dp">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.3"
            android:text="@string/rest_time" />


        <ImageView
            android:id="@+id/iv_rest_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icons_reduce" />

        <ImageView
            android:id="@+id/iv_rest_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icons_add" />

        <TextView
            android:id="@+id/tv_resttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/rest_duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">


        <Switch
            android:id="@+id/sw_everydayRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tip_everyday" />

        <Switch
            android:id="@+id/sw_SuperModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:checked="false"
            android:text="@string/super_model" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.flyco.roundview.RoundTextView
            android:id="@+id/btn_color_pinker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/set_main_bg"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"
            rv:rv_backgroundColor="@color/color_work_btn"
            rv:rv_cornerRadius="90dp" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/btn_color_tigger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/set_tigger_bg"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"
            rv:rv_backgroundColor="@color/color_work_btn"
            rv:rv_cornerRadius="90dp" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/btn_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/suggest"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"
            rv:rv_backgroundColor="@color/colorPrimary"
            rv:rv_cornerRadius="90dp" />
    </LinearLayout>

    <com.flyco.roundview.RoundTextView
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"
        android:text="@string/share"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip"
        rv:rv_backgroundColor="@color/colorPrimary"
        rv:rv_cornerRadius="90dp" />

</LinearLayout>
